@@ -1,5 +1,6 @@
 Version 1.1.4
-  * Added ChoicesBuilder#add_help_line and ChoicesBuilder#section.
+  * Enable better command_line documentation: ChoicesBuilder#add_help_line,
+ 	ChoicesBuilder#section, ChoicesBuilder#section_specific_to_script.
 
 Version 1.1.3
   * Bugfix: PosixCommandLineSource was not uniformly treated as a 	
